2023-06-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-fuse.el (tramp-fuse-handle-file-exists-p): New defun.
	(tramp-fuse-mount-timeout): Move up.
	(tramp-fuse-mount-point): Use `tramp-fuse-mount-timeout'.
	(tramp-fuse-unmount): Flush "mount-point" file property.

	* tramp-sshfs.el (tramp-sshfs-file-name-handler-alist):
	Use `tramp-fuse-handle-file-exists-p'.

2023-05-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-add-hops): Suppress `signal-hook-function'.
	Save `tramp-default-proxies-alist' only when changed.

2023-05-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-make-tramp-file-name): Keep hop while in file
	name completion.

	* tramp-sh.el (tramp-sh-handle-process-file): Set `env' explicitly.
	(tramp-barf-if-no-shell-prompt): Still add optional trailing
	`ansi-color-control-seq-regexp'.

2023-05-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-dissect-file-name): Revert last change.
	(tramp-handle-file-name-as-directory)
	(tramp-handle-file-name-directory): Let-bind
	`tramp-default-proxies-alist'.

2023-05-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-fuse.el (tramp-fuse-mount-point):
	* tramp-sh.el (tramp-ssh-controlmaster-options):
	Use `small-temporary-file-directory'.

2023-05-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-terminal-type): Fix docstring.
	(tramp-process-one-action): Delete ANSI control escape sequences
	in buffer.  (Bug#63539)

	* tramp-sh.el (tramp-barf-if-no-shell-prompt):
	Remove `ansi-color-control-seq-regexp'.

2023-05-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-dissect-file-name): Set hop to nil if NODEFAULT.
	(Bug#63578)

	* tramp-fuse.el (tramp-fuse-mount-point, tramp-fuse-mounted-p):
	Support existing mount points.

2023-05-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (ansi-color): Require.

	* tramp.el (tramp-shell-prompt-pattern): Remove escape characters.